Attempt to fix overflowing borders on mobile

--- a/src/styles/schedule.css
+++ b/src/styles/schedule.css
@@ -1,4 +1,4 @@
-body, html {
+body, html, #root {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -7,8 +7,8 @@ body, html {
 }
 
 #background {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-image: url("/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -19,7 +19,7 @@ body, html {
 }
 
 #grid-wrapper {
-  width: 90vw;
+  width: 80svw;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2vh 4vh;
